--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://goitacademy.github.io/KaterynaChernetska/goit-js-hw-11",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11git /"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
     "type": "git",
